Get Events from Facebook

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,5 +19,6 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_example">Example action</string>
     <string name="resume_story">Resume Story</string>
+    <string name="app_id">698356506895047</string>
 
 </resources>
