--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -20,5 +20,6 @@
     <string name="action_example">Example action</string>
     <string name="resume_story">Resume Story</string>
     <string name="app_id">698356506895047</string>
+    <string name="travel_diary_api_base">http://10.0.2.2:8000</string>
 
 </resources>
