--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,26 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">TravelDiaryAndroid</string>
-    <string name="title_savedata_detail">SaveData Detail</string>
+    <string name="app_id">698356506895047</string><string name="app_name">TravelDiaryAndroid</string>
+    <string name="app_page_id">1449310858633062</string><string name="title_savedata_detail">SaveData Detail</string>
     <string name="create_story">Create Story</string>
     <string name="select_story">Select Story</string>
     <string name="title_initiation">Initiation</string>
     <string name="title_activity_create_story">CreateStoryActivity</string>
     <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+    
     <string name="title_story_list">Stories</string>
     <string name="title_story_detail">Story Detail</string>
     <string name="title_activity_map">MapActivity</string>
     <string name="title_section1">Section 1</string>
     <string name="title_section2">Section 2</string>
     <string name="title_section3">Section 3</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="title_activity_story_edit">Edit</string><string name="title_activity_add_milestone">AddMilestoneActivity</string><string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="action_example">Example action</string>
+    
     <string name="resume_story">Resume Story</string>
-    <string name="app_id">698356506895047</string>
-    <string name="title_activity_story_edit">Edit</string>
-    <string name="title_activity_add_milestone">AddMilestoneActivity</string>
+    
+    <string name="action_settings">Settings</string>
+    <string name="action_example">Example action</string>
+    <string name="action_add_milestone">add milestone</string>
+    
+    <string-array name="app_permissions">
+        <item>user_activities</item>
+        <item>user_events</item>
+        <item>user_location</item>
+        <item>user_status</item>
+    </string-array>
 
 </resources>
